--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-csv": "^1.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-brands-svg-icons": "^5.8.2",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
@@ -14,8 +10,13 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "connected-react-router": "^6.4.0",
+    "react": "^16.8.6",
+    "react-csv": "^1.1.1",
+    "react-dom": "^16.8.6",
+    "react-onclickoutside": "^6.8.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
